force-app/main/default/objects/C360_OpportunityProduct__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>C360_Opportunity__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>ชื่อสินค้า</inlineHelpText>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>C360_Product__c.DeletionMark__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>C360_Product__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>C360_UnitConversion__c.Product__c</field>
                <operation>equals</operation>
                <valueField>$Source.Product__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>C360_UnitConversion__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <inlineHelpText>ปริมาณ</inlineHelpText>
        <label>Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>OpportunityNameCannotEdit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISCHANGED(Opportunity__c)
)</errorConditionFormula>
        <errorDisplayField>Opportunity__c</errorDisplayField>
        <errorMessage>ไม่สามารถแก้ไขชื่อ Opportunity ได้</errorMessage>
    </validationRules>
</CustomObject>